# decaf-mod

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release-plz.yml  release.yml
src/: lib.rs  main.rs
tests/: debounce.rs
