[package]
name = "decaf"
version = "1.0.0-alpha.1"
edition = "2024"
description = "Debouncing proxy for ACP - coalesces agent message chunks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/decaf"
keywords = ["acp", "agent", "proxy", "debounce"]
categories = ["development-tools"]

[dependencies]
sacp = "11.0.0-alpha.1"
tokio = { version = "1.48", features = ["time", "sync", "io-util", "io-std", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
sacp-conductor = "11.0.0-alpha.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.symposium]
args = ["100"]
